@@ -6,6 +6,8 @@
 
 2012-06-09  6.7.7-8 Cristy  <quetzlzacatenango@image...>
   * Initialize alpha channel when floodfill fill color is not opaque.
+  * XYZ and Lab colorspace conversion tweaked (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21161).
 
 2012-06-08  6.7.7-7 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.7-7, SVN revision 8219.
